feat(spotless improvements, general ux improvements)